tests/fixtures/positive/licensing/spdx-identifier-mismatch-with-project/Mismatch.kt
/*
 * Copyright 2024 Example
 * SPDX-License-Identifier: MIT
 */
package licensing

fun spdxIdentifierMismatch() = 42
