tests/fixtures/negative/licensing/MissingSpdxIdentifier.kt
/*
 * Copyright 2024 Example
 * SPDX-License-Identifier: Apache-2.0
 */
package licensing

fun missingSpdxIdentifier() = 42
